<resources>
    <string name="app_name">Hermes-Task Distribution Plantform</string>
    <string name="device_name">device name</string>
    <string name="device_mac">device mac address</string>
    <string name="device_ip">device ip address</string>
    <string name="task_name">task name </string>
    <string name="search">search</string>
    <string name="release">release a task</string>
    <string name="contribute">contribute to a task</string>
    <string name="task_list">taskList</string>
    <string name="refresh_taskList">refresh</string>
    <string name="device_list">deviceList</string>
    <string name="device_detail">deviceDetails</string>
    <string name="empty_device_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="empty_task_message">No task found. Please get some task.</string>
    <string name="task_detail">taskDetails</string>
    <string name="try_distribute_task">start distribution</string>
    <string name="try_get_task">start getting a task</string>
    <string name="submit_exe">submit an apk</string>
    <string name="submit_argu">submit an argument file</string>
    <string name="running_task">running task……</string>
    <string name="distributing_task">trying to distribute a task……</string>
    <string name="getting_task">trying to get a task ……</string>
    <string name="submit_task">submit this task</string>
    <string name="submit_task_name">name this task</string>
    <string name="submit_class_name">your main working class</string>
    <string name="title_activity_get_task_activity">GetTaskActivity</string>
    <string name="title_activity_distributing">DistributingActivity</string>
    <string name="title_activity_contributing">ContributingActivity</string>
    <string name="title_activity_copy_of_file_chooser">CopyOfFileChooserActivity</string>
    <string name="action_settings">Settings</string>
    <string name="start_string">start</string>
    <string name="end_string">end</string>
</resources>
