<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/button_sch"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft ="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distribute"
        android:id="@+id/button_dis"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/button_sch"
        android:layout_toRightOf="@+id/button_sch"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contribute"
        android:id="@+id/button_con"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/button_dis"

        android:layout_toEndOf="@+id/button_dis" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh_taskList"
        android:id="@+id/button_ref"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/button_con"
        android:layout_toEndOf="@+id/button_con" />

</RelativeLayout>